# cham-cham-cham

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.tools  README.md  index.html  params.json
CMake/: compiler_option.cmake  pch_support.cmake
cli/: CMakeLists.txt
cli/CMake/: compiler_option.cmake  pch_support.cmake
cli/boost/: add_boost_1_53_0_here.txt
cli/exe/: main.cpp
cli/ext/CVars/: CMakeLists.txt  CVar.h  CVarParse.cpp
cli/res/: font_12.xml  font_14.xml
cli/res/modeldata/reira/: G02T02.X  G02_T02.FBX  Read Me.txt
cli/res/theme/: Read Me.txt  lyrics_long.txt  lyrics_short.txt
cli/script/: res_build.py  res_build_test.py
cli/src/: HMDStereoRender.cpp  assert_inc.h  cvar_key.h  debug_draw_manager.cpp  debug_draw_manager.h  debug_draw_scene.cpp  debug_draw_scene.h  entrypoint.cpp  entrypoint.h  head_tacking.cpp  head_tracking.h  hmd_display.cpp  hmd_display.h  sample_scene.h  scene.h  scene_helper.cpp  stack_allocator.cpp  stack_allocator.h  stdafx.h  string_hash.h  string_util.h
cli/src/base/: arch.h  lib.cpp  lib.h  stack_allocator.cpp  stack_allocator.h  string_util.h  template_lib.h
cli/src/cbes/: cbes_globals.h  component_list.cpp  component_list.h  game_object.cpp  game_object.h  message.cpp  message.h  message_handler.h  object.cpp  object.h  sample_component.cpp  sample_component.h  world.cpp  world.h
cli/src/console/: console.cpp  console_event_receiver.cpp  console_event_receiver.h  console_function.cpp  console_function.h  defaultCmds.cpp  defaultCmds.h  irr_console.cpp  irr_console.h  utils.cpp  utils.h
cli/src/cvars/: CVar.h  CVarVectorIO.h
cli/src/demo/: ani_sequence.cpp  ani_sequence.h  color_sequence.cpp  color_sequence.h  cylinder_hmd_sequence.cpp  cylinder_hmd_sequence.h  demo_factory.cpp  demo_factory.h  demo_sequence.cpp  demo_sequence.h  demo_sequence_helper.cpp  demo_sequence_helper.h  sphere_hmd_sequence.cpp  sphere_hmd_sequence.h  ui_test_sequence.cpp  ui_test_sequence.h
cli/src/game/: JoystickEventReceiver.cpp  JoystickEventReceiver.h  ai_player.cpp  ai_player.h  attack_phase.cpp  attack_phase.h  chamchamcham.cpp  chamchamcham.h  debug_draw_scene.cpp  debug_draw_scene.h  debug_draw_sequence.cpp  debug_draw_sequence.h  defense_phase.cpp  defense_phase.h  finger_direction_event.cpp  finger_direction_event.h  finger_direction_phase.cpp  finger_direction_phase.h  game_console.cpp  game_console.h  game_loading_sequence.cpp  game_loading_sequence.h  game_result.cpp  game_result.h  game_scene.cpp  game_scene.h  game_sequence.cpp  game_sequence.h  input_event.cpp  input_event.h  joystick_input_event.cpp  joystick_input_event.h  key_mapping.cpp  key_mapping.h  main_sequence.cpp  main_sequence.h  rock_paper_scissor.cpp  rock_paper_scissor.h  rock_scissor_paper.cpp  rock_scissor_paper.h  (+18 more)
cli/src/hmd/: hmd_event_receiver.cpp
cli/src/irr/: HMDStereoRender.cpp  HMDStereoRender.h  cylinder_mapping_node.cpp  cylinder_mapping_node.h  debug_draw_manager.cpp  debug_draw_manager.h  debug_drawer.cpp  debug_drawer.h  draw_attribute_list_mixin.cpp  draw_attribute_list_mixin.h  head_tacker.cpp  head_tacking.cpp  head_tracker.h  hmd_camera.cpp  hmd_camera.h  hmd_event_receiver.cpp  hmd_event_receiver.h  hmd_gui.cpp  hmd_gui.h  hmd_stereo_render.cpp  hmd_stereo_render.h  leapmotion.cpp  leapmotion.h  line_batch.cpp  line_batch.h  line_batch_scene_node.cpp  line_batch_scene_node.h  sphere_attach_node.cpp  sphere_attach_node.h  sprite_scene_node.cpp  sprite_scene_node.h  text_3d_scene_node.cpp  text_3d_scene_node.h  wire_sphere_factory.h
cli/src/irrConsole/: console.cpp  console.h  defaultCmds.cpp  includes.h  utils.cpp
cli/src/util/: HMDStereoRender.cpp  OpenALDecoder.cpp  OpenALDecoder.h  SimpleAudioEngine.h  SimpleAudioEngineOpenAL.cpp  audio_manager.cpp  audio_manager.h  console_func.cpp  console_func.h  cvar_key.cpp  cvar_key.h  debug_draw_manager.cpp  debug_draw_manager.h  event_receiver_manager.cpp  event_receiver_manager.h  fps_counter.cpp  fps_counter.h  hmd_display.cpp  line_batch_scene_node.h
cli/test/: debug_draw_manager_test.cpp  sample.cpp  stack_allocator_test.cpp  string_hash_test.cpp  string_util_test.cpp  test_main.cpp  test_main.h  test_stdafx.cpp  test_stdafx.h
cli/test/base/: stack_allocator_test.cpp  string_hash_test.cpp  string_util_test.cpp  template_lib_test.cpp
cli/test/cbes/: component_list_test.cpp  game_object_test.cpp  object_test.cpp  world_test.cpp
cli/test/game/: input_event_test.cpp  rock_paper_scissor_test.cpp  rps_event_test.cpp
cli/test/irr/: line_batch_test.cpp
cli/test/util/: audio_manager_test.cpp  debug_draw_manager_test.cpp
exe/: main.cpp
licenses/: HMDIrrlicht_License.txt  IrrRift_License.txt  slidergirls_License.txt
src/: arch.h  debug_draw_manager.cpp  debug_draw_manager.h  entrypoint.cpp  head_tacking.cpp  hmd_display.cpp  hmd_display.h  sample_scene.cpp  sample_scene.h  scene.cpp  scene_helper.cpp  scene_helper.h  scene_node_animator_camera_hmd.cpp  scene_node_animator_camera_hmd.h  stdafx.h
srv/kotonoha/: Program.cs  kotonoha.csproj  kotonoha.sln
srv/kotonoha/Properties/: AssemblyInfo.cs
test/: debug_draw_manager_test.cpp  sample.cpp  test_main.cpp
