CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )
PROJECT( dokuro )

SET( DOKURO_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src )
SET( DOKURO_RES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/res )
SET( DOKURO_EXT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ext )
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin" )

AUX_SOURCE_DIRECTORY( ${DOKURO_SRC_DIR} DOKURO_SRC_FILES )

#########################################################
# Add Irrlight engine
ADD_SUBDIRECTORY( ${DOKURO_EXT_DIR}/irrlicht )

INCLUDE_DIRECTORIES( ${IRRLICHT_INC_DIR} )

# Add LibOVR
ADD_SUBDIRECTORY( ${DOKURO_EXT_DIR}/libovr )

INCLUDE_DIRECTORIES( ${LIBOVR_INC_DIR} )
#########################################################

IF( MSVC )
	LIST( APPEND DOKURO_LINK_LIBS irrlicht_shared LibOVR Setupapi Winmm	)
ELSE()
	LIST( APPEND DOKURO_LINK_LIBS irrlicht_static )
ENDIF()

IF( APPLE )
	LIST( APPEND DOKURO_RES_FILES ${DOKURO_RES_DIR}/OSX/MainMenu.nib )
	SET( DOKURO_EXE_OPTION MACOSX_BUNDLE )
ELSE(  )
ENDIF(  )

FILE( GLOB DOKURO_INC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h )

ADD_EXECUTABLE( dokuro ${DOKURO_EXE_OPTION}
	${DOKURO_SRC_FILES}
	${DOKURO_RES_FILES}
	${DOKURO_INC_FILES} )

TARGET_LINK_LIBRARIES( dokuro ${DOKURO_LINK_LIBS} ${IRRLICHT_LINK_LIBS} )